--- a/css/defaults.css
+++ b/css/defaults.css
@@ -34,9 +34,9 @@ h1,
 h2,
 h3 {color: var(--clr-black);}
 
-img {
-  width: 100%;
-  height: 100%;
+p {
+  color: var(--clr-paragraph);
+  line-height: 171%;
 }
 
 input::-webkit-outer-spin-button,
