--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@
 /* -------------------------------------------------------------------------- */
 .back-project {
   margin: 0 1.5rem;
-  position: fixed;
+  position: absolute;
   transition: all 0.35s ease-in;
   top: 120px;
   bottom: 0;
@@ -326,7 +326,7 @@
   background-color: var(--clr-white);
   text-align: center;
   padding: 32px 24px 40px;
-  position: fixed;
+  position: absolute;
   top: 143px;
   right: 0;
   left: 0;
