--- a/css/defaults.css
+++ b/css/defaults.css
@@ -19,6 +19,10 @@
   padding: 0;
 } 
 
+[data-animation='zoomInOut'] {transform: scale(0.2);}
+
+[data-animation='zoomInOut'].is-visible {transform: none;}
+
 body {
   background-color: var(--clr-body);
   font-family: 'Commissioner', sans-serif;
@@ -48,7 +52,7 @@ input[type="text"]:focus {
 .container {
   max-width: 730px;
   margin: 0 auto;
-  padding: 40px 24px 16px;
+  padding: 2.5rem 1.5rem 1rem;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.0497193);
   border-radius: 0.5rem;
@@ -93,4 +97,51 @@ button:not(:disabled):not(.btn--disabled) {cursor: pointer;}
   font-size: 0.875rem;
   padding: 1em 1em;
 }
+
+.br-8 {border-radius: 0.5rem;}
+
+.br-33 {border-radius: 2.0625rem;}
+
+.card {
+  background-color: var(--clr-white);
+  padding: 1.5rem;
+  margin-top: 1.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.5rem;
+}
+
+.card__flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.card__title {font-size:clamp(0.875rem, 3vw, 1.125rem) ;}
+
+.card__amount {
+  color: var(--clr-accent);
+  font-weight: 500;
+}
+
+.card__description {margin-top: 1.5rem;}
+
+.card__header {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.card__products-num {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.card__products-num--big {font-size: 2rem;}
+
+.card__products-left {
+  font-size: 0.9375rem;
+  font-weight: 400;
+}
+
+.card--out-of-stock {opacity: 0.4;}
 
