--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,13 @@
   display: block;
   padding: 1.5rem 0;
   margin-top: 2.25rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   z-index: 200;
 }
 
 .nav-toggle:checked ~ .nav .nav__list-link {
   color: var(--clr-black);
-  margin-left: 24px;
+  margin-left: 1.5rem;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -74,22 +74,21 @@
 /*                         STARTS MASTERCRAFT SECTION                        */
 /* -------------------------------------------------------------------------- */
 .mastercraft {
-  position: relative;
   background-color: var(--clr-white);
+  position: relative;
   max-width: 730px;
   padding: 0 1.5rem 2.5rem;
   margin: -58px auto 1.5rem;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.0497193);
-  border-radius: 8px;
 }
 
 .mastercraft__logo {
   position: relative;
   top: -25px;
-  margin: 0 auto;
   width: 3.5rem;
   height: 3.5rem;
+  margin: 0 auto;
 }
 
 .mastercraft__title {
@@ -117,37 +116,32 @@
   height: 3.5rem;
 }
 
-.bookmark__img--hidden {
-  display: none;
-}
+.bookmark__img--hidden {display: none;}
 
-.bookmark__img--cyan {
-  display: none;
-}
+.bookmark__img--cyan {display: none;}
 
 .bookmark__img--cyan-visible {
   display: block;
-  margin-right: 15px;
+  margin-right: 0.937rem;
 }
 
 .bookmark__img:hover {cursor: pointer;}
 
 .bookmark__par {
   display: none;
+  color: var(--clr-dark-cyan);
   font-size: 0.875rem;
   font-weight: 700;
-  color: var(--clr-dark-cyan);
 }
 
 .bookmarked__par--hidden {display: block;}
 
 .bookmarked {
   display: none;
+  background-color: var(--clr-bookmark-bg);
   color: var(--clr-dark-cyan);
   display: flex;
   align-items: center;
-  background-color: var(--clr-bookmark-bg);
-  border-radius: 33.5px;
   width: 174px;
   height: 56px;
   transition: all ease-in-out 0.4s;
@@ -158,12 +152,11 @@
 /* -------------------------------------------------------------------------- */
 .backers {
   background-color: var(--clr-white);
-  max-width: 730px;
   text-align: center;
-  padding: 32px 24px 40px;
+  max-width: 730px;
+  padding: 2rem 1.5rem 2.5rem;
   margin: 0 auto 1.5rem;
   border: 1px solid rgba(0, 0, 0, 0.0497193);
-  border-radius: 8px;
 }
 
 .backers__inner-wrapper {
@@ -173,7 +166,7 @@
   margin-bottom: 2rem;
 }
 
-.backers__header {margin-bottom: 9px;}
+.backers__header {margin-bottom: 0.5625rem;}
 
 .backers__total {
   color: var(--clr-black);
@@ -186,17 +179,16 @@
   mix-blend-mode: normal;
   opacity: 0.1;
   width: 29.4%;
-  margin: 24px auto 0;
+  margin: 1.5rem auto 0;
 }
 
 .progress-bar {
+  background-color: hsla(0, 0%, 18%, 0.05);
   width: 100%;
   max-width: 634px;
   height: 0.75em;
-  border-radius: 33.5px;
-  background-color: hsla(0, 0%, 18%, 0.05);
-  mix-blend-mode: normal;
   margin: 0 auto;
+  mix-blend-mode: normal;
 }
 
 .progress-bar__bg {
@@ -204,7 +196,6 @@
   width: 0;
   max-width: 100%;
   height: 0.75em;
-  border-radius: 33.5px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -219,70 +210,22 @@
   margin-bottom: 2.1875rem;
 }
 
-.card {
-  background-color: white;
-  padding: 1.5rem;
-  margin-top: 1.5rem;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 8px;
-}
-
-.card__flex-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.card__title {font-size:clamp(0.875rem, 3vw, 1.125rem) ;}
-
-.card__amount {
-  color: var(--clr-accent);
-  font-weight: 500;
-}
-
-.card__description {margin-top: 1.5rem;}
-
-.card__header {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.card__products-num {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.card__products-num--big {font-size: 2rem;}
-
-.card__products-left {
-  font-size: 0.9375rem;
-  font-weight: 400;
-}
-
-.card--out-of-stock {opacity: 0.4;}
-
 /* -------------------------------------------------------------------------- */
 /*                          START BACK PROJECT MODEL                          */
 /* -------------------------------------------------------------------------- */
 .back-project {
-  margin: 0 1.5rem;
-  max-width: 730px;
+  visibility: hidden;
+  background: var(--clr-white);
   position: absolute;
-  transition: all 0.35s ease-in;
-  top: 120px;
+  top: 7.5rem;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
-  background: var(--clr-white);
-  visibility: hidden;
+  max-width: 730px;
+  margin: 0 1.5rem;
+  transition: all 0.35s ease-in;
   opacity: 0;
-  border-radius: 8px;
 }
-
-[data-animation='zoomInOut'] {transform: scale(0.2);}
-
-[data-animation='zoomInOut'].is-visible {transform: none;}
 
 .back-project__header {
   display: flex;
@@ -307,12 +250,12 @@
 .card__radio {
   -webkit-appearance: none;
   appearance: none;
+  background-color: var(--clr-white);
+  color: var(--clr-accent);
   display: grid;
   place-content: center;
-  background-color: var(--clr-white);
   margin-right: 0.625rem;
   font: inherit;
-  color: var(--clr-accent);
   width: 1.86em;
   height: 1.86em;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -362,24 +305,23 @@
 .card--popup-visible {display: block;}
 
 .card--popup__flex-wrapper {
+  text-align: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  text-align: center;
 }
 
 .card--popup__input {
+  color: var(--clr-black);
+  font-size: 0.875rem;
+  text-align: left;
+  font-weight: 700;
   width: 100px;
   max-width: 100px;
   height: 48px;
   max-height: 48px;
-  font-weight: 700;
-  font-size: 0.875rem;
   margin-right: 1rem;
-  color: var(--clr-black);
-  text-align: left;
   padding-left: 1.5rem;
-  border-radius: 33.5px;
   border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
@@ -388,15 +330,15 @@
 /* -------------------------------------------------------------------------- */
 
 .thankyou {
+  text-align: center;
+  position: absolute;
+  top: 8.9375rem;
+  right: 0;
+  bottom: 0;
+  left: 0;
   max-width: 540px;
   margin: 0 auto;
-  text-align: center;
-  padding: 32px 24px 40px;
-  position: absolute;
-  top: 143px;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  padding: 2rem 1.5rem 2.5rem;
   transition: all 0.35s ease-in;
   visibility: hidden;
   opacity: 0;
