--- a/css/defaults.css
+++ b/css/defaults.css
@@ -50,7 +50,7 @@ input[type="text"]:focus {
 }
 
 .container {
-  max-width: 730px;
+  max-width: 45.625rem;
   margin: 0 auto;
   padding: 2.5rem 1.5rem 1rem;
   background-color: white;
