--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@
 .mastercraft {
   background-color: var(--clr-white);
   position: relative;
-  max-width: 730px;
+  max-width: 45.625rem;
   padding: 0 1.5rem 2.5rem;
   margin: -58px auto 1.5rem;
   text-align: center;
@@ -142,8 +142,8 @@
   color: var(--clr-dark-cyan);
   display: flex;
   align-items: center;
-  width: 174px;
-  height: 56px;
+  width: 10.875rem;
+  height: 3.5rem;
   transition: all ease-in-out 0.4s;
 }
 
@@ -153,7 +153,7 @@
 .backers {
   background-color: var(--clr-white);
   text-align: center;
-  max-width: 730px;
+  max-width: 45.625rem;
   padding: 2rem 1.5rem 2.5rem;
   margin: 0 auto 1.5rem;
   border: 1px solid rgba(0, 0, 0, 0.0497193);
@@ -185,7 +185,7 @@
 .progress-bar {
   background-color: hsla(0, 0%, 18%, 0.05);
   width: 100%;
-  max-width: 634px;
+  max-width: 39.625rem;
   height: 0.75em;
   margin: 0 auto;
   mix-blend-mode: normal;
@@ -206,7 +206,7 @@
 .about__title{font-size: clamp(1.125rem, 4vw, 1.25rem);}
 
 .about__description {
-  max-width: 634px;
+  max-width: 39.625rem;
   margin-bottom: 2.1875rem;
 }
 
@@ -221,7 +221,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  max-width: 730px;
+  max-width: 45.625rem;
   margin: 0 1.5rem;
   transition: all 0.35s ease-in;
   opacity: 0;
@@ -316,10 +316,10 @@
   font-size: 0.875rem;
   text-align: left;
   font-weight: 700;
-  width: 100px;
-  max-width: 100px;
-  height: 48px;
-  max-height: 48px;
+  width: 6.25rem;
+  max-width: 6.25rem;
+  height: 3rem;
+  max-height: 3rem;
   margin-right: 1rem;
   padding-left: 1.5rem;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -336,7 +336,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  max-width: 540px;
+  max-width: 33.75rem;
   margin: 0 auto;
   padding: 2rem 1.5rem 2.5rem;
   transition: all 0.35s ease-in;
