--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,8 @@
 .nav__list-rule {
   background-color: var(--clr-dark-gray);
   margin: 1.5rem 0;
+  width: 100%;
+  height: 1px;
   mix-blend-mode: normal;
   opacity: 0.1;
 }
