--- a/css/defaults.css
+++ b/css/defaults.css
@@ -49,6 +49,12 @@ input[type="text"]:focus {
   border: 1px solid var(--clr-accent);
 }
 
+.hero {
+  background-image: url('../images/image-hero-mobile.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .container {
   max-width: 45.625rem;
   margin: 0 auto;
