--- a/css/defaults.css
+++ b/css/defaults.css
@@ -17,7 +17,28 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-} 
+}
+
+@font-face {
+  font-family:"commissioner";
+  src: url("../assets/fonts/Commissioner-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family:"commissioner";
+  src: url("../assets/fonts/Commissioner-Medium.ttf") format("ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family:"commissioner";
+  src: url("../assets/fonts/Commissioner-Bold.ttf") format("ttf");
+  font-weight: 700;
+  font-style: normal;
+}
 
 [data-animation='zoomInOut'] {transform: scale(0.2);}
 
@@ -26,6 +47,7 @@
 body {
   background-color: var(--clr-body);
   font-family: 'Commissioner', sans-serif;
+  font-weight: 400;
   font-size: clamp(0.875rem, 3vw, 1rem);
 }
 
@@ -50,7 +72,7 @@ input[type="text"]:focus {
 }
 
 .hero {
-  background-image: url('../images/image-hero-mobile.jpg');
+  background-image: url('../assets/images/image-hero-mobile.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
