--- a/css/defaults.css
+++ b/css/defaults.css
@@ -11,6 +11,8 @@
   --clr-bookmark-bg: 	hsla(176, 72%, 28%, 0.1);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+
 *,
 *::before,
 *::after {
