--- a/css/defaults.css
+++ b/css/defaults.css
@@ -16,14 +16,15 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-[data-animation='zoomInOut'] {transform: scale(0.2);}
+[data-animation='zoomInOut'] {-webkit-transform: scale(0.2);-ms-transform: scale(0.2);transform: scale(0.2);}
 
-[data-animation='zoomInOut'].is-visible {transform: none;}
+[data-animation='zoomInOut'].is-visible {-webkit-transform: none;-ms-transform: none;transform: none;}
 
 body {
   background-color: var(--clr-body);
@@ -70,6 +71,8 @@ input[type="text"]:focus {
   border: none;
   border-radius: 2.09375rem;
   font-weight: 700;
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
 }
 
@@ -119,8 +122,13 @@ button:not(:disabled):not(.btn--disabled) {cursor: pointer;}
 }
 
 .card__flex-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 0.5rem;
 }
 
@@ -134,8 +142,12 @@ button:not(:disabled):not(.btn--disabled) {cursor: pointer;}
 .card__description {margin-top: 1.5rem;}
 
 .card__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 0.5rem;
 }
 
