--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 /* -------------------------------------------------------------------------- */
 /*                              STARTS TOGGLE NAV                             */
 /* -------------------------------------------------------------------------- */
@@ -60,10 +58,11 @@
 
 .nav__list-link:focus {
   outline: none;
-  text-decoration: underline 1px solid var(--clr-white);
+  -webkit-text-decoration: underline 1px solid var(--clr-white);
+          text-decoration: underline 1px solid var(--clr-white);
 }
 
-.nav__list-link:hover {text-decoration: underline 1px solid var(--clr-white);}
+.nav__list-link:hover {-webkit-text-decoration: underline 1px solid var(--clr-white);text-decoration: underline 1px solid var(--clr-white);}
 
 .nav__list-rule {
   background-color: var(--clr-dark-gray);
@@ -102,14 +101,22 @@
 }
 
 .mastercraft__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 0.5625rem;
   margin-top: 1.5rem;
 }
 
 .bookmark {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 3.5rem;
   height: 3.5rem;
@@ -144,10 +151,16 @@
   display: none;
   background-color: var(--clr-bookmark-bg);
   color: var(--clr-dark-cyan);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 10.875rem;
   height: 3.5rem;
+  -webkit-transition: all ease-in-out 0.4s;
+  -o-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
 
@@ -164,8 +177,13 @@
 }
 
 .backers__inner-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1.5rem;
   margin-bottom: 2rem;
 }
@@ -227,14 +245,22 @@
   left: 0;
   max-width: 45.625rem;
   margin: 0 1.5rem;
+  -webkit-transition: all 0.35s ease-in;
+  -o-transition: all 0.35s ease-in;
   transition: all 0.35s ease-in;
   opacity: 0;
 }
 
 .back-project__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .back-project__title {font-size: 1.125rem;}
@@ -242,20 +268,24 @@
 .back-project__close {
   width: 0.875rem;
   height: 0.875rem;
+  -webkit-transition: all 0.25s ease-in;
+  -o-transition: all 0.25s ease-in;
   transition: all 0.25s ease-in;
   cursor: pointer;
 }
 
-.back-project__close:hover {transform: scale(1.2);}
+.back-project__close:hover {-webkit-transform: scale(1.2);-ms-transform: scale(1.2);transform: scale(1.2);}
 
 .back-project__header,
 .back-project__description {margin-bottom: 1.5rem;}
 
 .card__radio {
   -webkit-appearance: none;
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
   background-color: var(--clr-white);
   color: var(--clr-accent);
+  display: -ms-grid;
   display: grid;
   place-content: center;
   margin-right: 0.625rem;
@@ -271,12 +301,19 @@
   width: 0.857em;
   height: 0.857em;
   border-radius: 50%;
-  transform: scale(0);
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: 120ms -webkit-transform ease-in-out;
+  transition: 120ms -webkit-transform ease-in-out;
+  -o-transition: 120ms transform ease-in-out;
   transition: 120ms transform ease-in-out;
-  box-shadow: inset 1em 1em var(--clr-accent);
+  transition: 120ms transform ease-in-out, 120ms -webkit-transform ease-in-out;
+  -webkit-box-shadow: inset 1em 1em var(--clr-accent);
+          box-shadow: inset 1em 1em var(--clr-accent);
 }
 
-.card__radio:checked::before {transform: scale(1);}
+.card__radio:checked::before {-webkit-transform: scale(1);-ms-transform: scale(1);transform: scale(1);}
 
 .card__radio:focus {
   outline: none;
@@ -284,9 +321,16 @@
 }
 
 .card__inner-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.5rem;
 }
 
@@ -310,8 +354,13 @@
 
 .card--popup__flex-wrapper {
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
 }
 
@@ -329,8 +378,12 @@
 }
 
 .card--popup__inner-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.9375rem;
 }
 
@@ -348,6 +401,8 @@
   max-width: 33.75rem;
   margin: 0 auto;
   padding: 2rem 1.5rem 2.5rem;
+  -webkit-transition: all 0.35s ease-in;
+  -o-transition: all 0.35s ease-in;
   transition: all 0.35s ease-in;
   visibility: hidden;
   opacity: 0;
@@ -368,6 +423,8 @@
 }
 
 .bg-opacity {
+  background: -webkit-gradient(linear, left top, left bottom, from(#000000), to(rgba(0, 0, 0, 0.0001)));
+  background: -o-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.0001) 100%);
   background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.0001) 100%);
   mix-blend-mode: normal;
   opacity: 0.4;
