--- a/css/defaults.css
+++ b/css/defaults.css
@@ -11,8 +11,6 @@
   --clr-bookmark-bg: 	hsla(176, 72%, 28%, 0.1);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
-
 *,
 *::before,
 *::after {
@@ -21,6 +19,49 @@
   margin: 0;
   padding: 0;
 }
+
+/* commissioner-400 - latin */
+@font-face {
+  font-family: 'Commissioner';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/commissioner-v11-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../assets/fonts/commissioner-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/commissioner-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/commissioner-v11-latin-regular.svg#Commissioner') format('svg'); /* Legacy iOS */
+}
+
+/* commissioner-500 - latin */
+@font-face {
+  font-family: 'Commissioner';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../assets/fonts/commissioner-v11-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../assets/fonts/commissioner-v11-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/commissioner-v11-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-500.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/commissioner-v11-latin-500.svg#Commissioner') format('svg'); /* Legacy iOS */
+}
+
+/* commissioner-700 - latin */
+@font-face {
+  font-family: 'Commissioner';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../assets/fonts/commissioner-v11-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../assets/fonts/commissioner-v11-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/commissioner-v11-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/commissioner-v11-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/commissioner-v11-latin-700.svg#Commissioner') format('svg'); /* Legacy iOS */
+}
+
 
 [data-animation='zoomInOut'] {-webkit-transform: scale(0.2);-ms-transform: scale(0.2);transform: scale(0.2);}
 
