--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,7 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  justify-content: center;
   gap: 1.5rem;
   margin-bottom: 2rem;
 }
